Drop JDK 23 testing